--- a/shop/assets/css/style.css
+++ b/shop/assets/css/style.css
@@ -48,7 +48,7 @@
 
 .card{
 	width: 15rem;
-	max-height: 350px;
+	height: 360px;
 }
 
 .card img{
